--- a/index.html.html
+++ b/index.html.html
@@ -12,7 +12,7 @@
   <body>
 
   <h2>A leaf. Yes, I love this joke</h2>
-  <img src= "leave-clipart.JPG">
+  <img src= "leave-clipart.jpg">
   </body>
   </html>
 
@@ -53,7 +53,7 @@ You know enough history about my first name. Now, let us get to know my last nam
 
 <html>
 <body>
-<br> <img src= "gulab.jpg" width="100"> <img src="lado.jpg" width="100">
+<br> <img src= "Gulab.jpg" width="100"> <img src="lado.jpg" width="100">
   <br><img src="choco.jpg" width="100"> <img src="ice.jpg" width="100">
 </html>
 </body>
