--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ You know enough history about my first name. Now, let us get to know my last nam
 <html>
 <body>
 <br> <img src= "Gulab.jpg" width="100"> <img src="lado.jpg" width="100">
-  <br><img src="choco.jpg" width="100"> <img src="ice.jpg" width="100">
+  <br><img src="choco.jpg" width="100"> <img src="ice.jpg" width="150">
 </html>
 </body>
 
@@ -83,3 +83,10 @@ You know enough history about my first name. Now, let us get to know my last nam
    I also like to watch a movie or research something of my interest.
    </html>
  </body>
+</head>
+
+<body>
+  <h1> Fav Colors </h1>
+  <br><img src="color.png"> <img src="bright.jpg">
+  </html>
+</body>
