--- a/index.html
+++ b/index.html
@@ -87,6 +87,6 @@ You know enough history about my first name. Now, let us get to know my last nam
 
 <body>
   <h1> Fav Colors </h1>
-  <br><img src="color.png"> <img src="bright.jpg">
+  <br><img src="color.png" width="90"> <img src="bright.jpg"width="90">
   </html>
 </body>
