--- a/index.html
+++ b/index.html
@@ -1,34 +1,60 @@
+<!DOCTYPE html>
+
 <html>
   <head>
   <title> Get To Know A Leaf </title>
 
-  </head>
-  <body>
-  <b>  My real name is Aleef Noor. Read this webpage and you will know me enough <b>
-  </body>
-  </html>
-  <!DOCTYPE html>
   <html>
   <body>
+    <img  align= "left" src="me.jpg" width:"300" height="350" >
+<div  align= "left">
+    <div align="center">
+      <br><br><br>
+      <b><p> Hi, I am a leaf. <br> I am normal teenager born on September 8, 2001.<br> I still don't know why I was brought
+        into this world but I am figuring it out. <br> I am a muslim and have 4 family members whom I cherish.<br> This website
+        is designed to let you get to know me. <br> Please enjoy, and just a warning, I don't know what grammar is. </b> </p>
+      </div>
+    </div>
+    </html>
+    <body>
 
-  <h2>A leaf. Yes, I love this joke</h2>
+</head>
+<body>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br><br><br><br><br><h1> All Bout Ma Name </h1>
+    </html>
+  </body>
+
+</head>
+<body>
+<br> My actual name is Aleef Noor. My first name could mean a leaf but it also is the
+<i><b>first letter of the arabic alphabet</i></b>.
+</body>
+</html>
+
+</head>
+<body>
+<br> You know enough history about my first name. Now, let us get to know my last name. <br> My last name is Noor. Noor means light.
+So, I like to think my name means <b><i> First Light. </i></b>
+<br>Since now you are familiar with my name, let us look at my interests.
+</body>
+</html>
+
+  <html>
+  <body>
+<br> <b> <h3>A leaf. Yes, I love this joke</h3> </b>
   <img src= "leave-clipart.jpg">
   </body>
   </html>
 
 
-</head>
-<body>
-<br>My first name could mean a leaf but it also is the <i>first letter of the arabic alphabet</i>.
-</body>
-</html>
-
-</head>
-<body>
-You know enough history about my first name. Now, let us get to know my last name. <br> My last name is Noor. Noor means light. So, I like to think my name means <b><i> First Light </i></b>
-<br> Since now you are familiar with my name, let us look at my interests.
-</body>
-</html>
 
 </head>
 <body>
@@ -78,13 +104,13 @@ You know enough history about my first name. Now, let us get to know my last nam
 
 </head>
 <body>
-  <br> In my free time I love to do nothing. I just like to sit and stare into empty space.<br>
-   However, if I want to do something, I like to read a book or spend time with friends or family.<br>
-   I also like to watch a movie or research something of my interest.
+  <br> In my free time I love to do <b>nothing</b>. I just like to sit and stare into empty space.<br>
+   However, if I want to do something, I like to <b>read a book</b> or <b>spend time with friends or family</b>.<br>
+   I also like to <b>watch a movie</b> or <b>research</b> something of my interest.
    </html>
  </body>
-</head>
 
+</head>
 <body>
   <h1> Fav Colors </h1>
   <br><img src="color.png" width="100"> <img src="bright.jpg"width="100">
