--- a/index.html
+++ b/index.html
@@ -113,6 +113,38 @@ So, I like to think my name means <b><i> First Light. </i></b>
 </head>
 <body>
   <h1> Fav Colors </h1>
-  <br><img src="color.png" width="100"> <img src="bright.jpg"width="100">
+  <br><img src="color.png" width="150"> <img src="bright.jpg"width="150">
+  <br>I love pastel and bright colors. My most fav colors are <b> cotton candy pink</b> and <b> sky blue </b>
+  <br> I also like neon green.
   </html>
+</body>
+
+</head>
+<body>
+  <h1> My Family </h1>
+  <img src="mp.jpg" height="350" length="100"> <br>
+  My <b>SWEET MOM</b> and <b>AWESOME DAD</b><br>
+    <img src="bro.jpg" height="350" length="100"> <br>
+    My mean smart bro. I don't even know why god gave him brains. <br><b> HE DOESN'T DESERVE BRAINS</b>.
+    However, who am I to judge?
+  </html>
+</body>
+
+</head>
+<body>
+  <h1> Dreams and Career Path </h1>
+  <img src="m2.jpg" height="150"><img src="f.jpg"height="150" width="100"><br>
+  <img src="mm.jpg" height="200" > <br>
+  My dream is to <b> walk down on Manhattan looking like a strong, fashionable, wealthy, and independent woman. </b><br>
+  I used to be interested in writing so, I am enrolled in a writing program at my high school. <br>
+  However, recently I found out I don't like to write because it's too much work. I am passionate <br>
+  about short poems or stories, but I am not ready to write novels. Before going into writing, I had an <br>
+  interest in computer science and I wanted to work for google. I am back to that dream again. <br>
+  Due to the dream, I am attending Girls Who Code to refresh my memory in code. So far, I am loving it. <br>
+  I am also extremely interested in acting. I was part of my drama club in middle school. I acted and I <br>
+  loved the praise I got from it. In high school, during sophomore year, we did Shakespeare plays. These plays <br>
+  helped me realize how passionate I was about acting. Due to this, I enrolled for college now drama classes at Queens<br>
+  college. I can't wait to get started. So far, I am set on doing a major at computer science and minor in acting. <br>
+  I know it will be a challenge, but I am willing to do anything to accomplish my dream.
+</html>
 </body>
