--- a/index.html
+++ b/index.html
@@ -2,137 +2,101 @@
 
 <html>
   <head>
-  <title> Get To Know A Leaf </title>
+    <title> Get To Know A Leaf </title>
 
-  <html>
+    <style>
+      h1 {font-size: 30px}
+        h2 {font-size: 30px}  h3 {font-size: 30px}  h4 {font-size: 30px}  h5 {font-size: 30px}  h6 {font-size: 30px}
+        div#section1 {
+          background-color: lightpink;
+        }
+
+
+    </style>
+    </head>
+
   <body>
-    <img  align= "left" src="me.jpg" width:"300" height="350" >
-<div  align= "left">
-    <div align="center">
+    <div id="section1" align="center">
+      <img  align= "left" src="me.jpg" width:"300" height="350" >
       <br><br><br>
       <b><p> Hi, I am a leaf. <br> I am normal teenager born on September 8, 2001.<br> I still don't know why I was brought
         into this world but I am figuring it out. <br> I am a muslim and have 4 family members whom I cherish.<br> This website
         is designed to let you get to know me. <br> Please enjoy, and just a warning, I don't know what grammar is. </b> </p>
-      </div>
     </div>
-    </html>
-    <body>
+    <div>
+      <br> My actual name is Aleef Noor. My first name could mean a leaf but it also is the
+      <i><b>first letter of the arabic alphabet</i></b>.
+    </div>
 
-</head>
-<body>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br><br><br><br><br><h1> All Bout Ma Name </h1>
-    </html>
-  </body>
-
-</head>
-<body>
-<br> My actual name is Aleef Noor. My first name could mean a leaf but it also is the
-<i><b>first letter of the arabic alphabet</i></b>.
-</body>
-</html>
-
-</head>
-<body>
-<br> You know enough history about my first name. Now, let us get to know my last name. <br> My last name is Noor. Noor means light.
-So, I like to think my name means <b><i> First Light. </i></b>
-<br>Since now you are familiar with my name, let us look at my interests.
-</body>
-</html>
-
-  <html>
-  <body>
-<br> <b> <h3>A leaf. Yes, I love this joke</h3> </b>
+    <div>
+      <br> You know enough history about my first name. Now, let us get to know my last name. <br> My last name is Noor. Noor means light.
+      So, I like to think my name means <b><i> First Light. </i></b>
+      <br>Since now you are familiar with my name, let us look at my interests.
+    </div>
+    <div>
+        <p><b> A leaf. Yes, I love this joke </b></p>
+    </div>
   <img src= "leave-clipart.jpg">
-  </body>
-  </html>
+</div>
 
 
 
-</head>
-<body>
-<h1> Fav Foods </h1>
-</body>
-</html>
+<div>
+<h3> Fav Foods </h3>
+</div>
 
-<html>
-<body>
+<div>
 <img src= "hamburger.jpg" alt="juicy Hamburger" width="100"> <img src="pizza.jpg" width="100">
 <br><img src="pasta.jpg" width="100"> <img src="meatballs.jpg" width="100">
-</html>
-</body>
+</div>
 
-</head>
-<body>
+<div>
   <br> As you can tell from the pictures above, <b> I LOVE JUNK FOOD.</B>
   <br>  However, I eat healthy everyday and consume junk food in limited amounts.
   <br>  I also <b> LOVE </b> sweets. In fact, I wouldn't mind to marry one.
-  </html>
-  </body>
+</div>
 
-<html>
-<body>
+<div>
 <br> <img src= "Gulab.jpg" width="100"> <img src="lado.jpg" width="100">
   <br><img src="choco.jpg" width="100"> <img src="ice.jpg" width="150">
-</html>
-</body>
+</div>
 
-</head>
-<body>
+<div>
   <br> Just so you know, I love sweets more than junk food.
-  </html>
-</body>
+</div>
 
-</head>
-<body>
-  <h1> Hobbies </h1>
-</html>
-</body>
+<div>
+  <h4> Hobbies </h4>
+</div>
 
-<html>
-<body>
+<div>
   <br><img src="family.jpg" width="300"> <img src="monkey.jpg" width="150">
-</html>
-</body>
+</div>
 
-</head>
-<body>
+<div>
   <br> In my free time I love to do <b>nothing</b>. I just like to sit and stare into empty space.<br>
    However, if I want to do something, I like to <b>read a book</b> or <b>spend time with friends or family</b>.<br>
    I also like to <b>watch a movie</b> or <b>research</b> something of my interest.
-   </html>
- </body>
+ </div>
 
-</head>
-<body>
-  <h1> Fav Colors </h1>
-  <br><img src="color.png" width="150"> <img src="bright.jpg"width="150">
+<div>
+  <h6> Fav Colors </h6>
+  <img src="color.png" width="150" height="100"> <img src="bright.jpg"width="150">
   <br>I love pastel and bright colors. My most fav colors are <b> cotton candy pink</b> and <b> sky blue </b>
   <br> I also like neon green.
-  </html>
-</body>
+</div>
 
-</head>
-<body>
-  <h1> My Family </h1>
+<div>
+  <h5> My Family </h5>
   <img src="mp.jpg" height="350" length="100"> <br>
   My <b>SWEET MOM</b> and <b>AWESOME DAD</b><br>
     <img src="bro.jpg" height="350" length="100"> <br>
     My mean smart bro. I don't even know why god gave him brains. <br><b> HE DOESN'T DESERVE BRAINS</b>.
     However, who am I to judge?
-  </html>
-</body>
+  </div>
 
-</head>
-<body>
-  <h1> Dreams and Career Path </h1>
+<div>
+  <h6> Dreams and Career Path </h6>
   <img src="m2.jpg" height="150"><img src="f.jpg"height="150" width="100"><br>
   <img src="mm.jpg" height="200" > <br>
   My dream is to <b> walk down on Manhattan looking like a strong, fashionable, wealthy, and independent woman. </b><br>
@@ -146,5 +110,4 @@ So, I like to think my name means <b><i> First Light. </i></b>
   helped me realize how passionate I was about acting. Due to this, I enrolled for college now drama classes at Queens<br>
   college. I can't wait to get started. So far, I am set on doing a major at computer science and minor in acting. <br>
   I know it will be a challenge, but I am willing to do anything to accomplish my dream.
-</html>
-</body>
+</div>
