--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         h2 {font-size: 30px}  h3 {font-size: 30px}  h4 {font-size: 30px}  h5 {font-size: 30px}  h6 {font-size: 30px}
         div#section1 {
           background-color: lightpink;
+          font-size: 25px
         }
 
 
