--- a/images/index.html
+++ b/images/index.html
@@ -34,7 +34,7 @@
         }
 
         div#section6 {
-          background-color: PaleVioletRed;
+          background-color: yellow;
         }
 
 
@@ -105,9 +105,9 @@
 
 <div id="section6">
   <h1> My Family </h1>
-  <img src="mp.jpg" height="350" length="100"> <br>
+  <img src="mp.jpg" height="350" length="100"> <img src="s.jpg" height="350" length="100"> <br>
   <p2 style="font-size: 20px;">My <b>SWEET MOM</b> and <b>AWESOME DAD</b><br>
-    <img src="bro.jpg" height="350" length="100"> <br>
+    <img src="bro.jpg" height="350" length="100"> <img src=" b.jpg" height="350"><br>
     My mean smart bro. I don't even know why god gave him brains. <br><b> HE DOESN'T DESERVE BRAINS</b>.
     However, who am I to judge?</p2>
   </div>
