--- a/images/index.html
+++ b/images/index.html
@@ -116,7 +116,7 @@
   <h1> Dreams and Career Path </h1>
   <img src="m2.jpg" height="150"><img src="f.jpg" height="150" width="100"><br>
   <img src="mm.jpg" height="200" > <br>
-  My dream is to <b> walk down on Manhattan looking like a strong, fashionable, wealthy, and independent woman. </b><br>
+  <p2 style="font-size: 20px;">My dream is to <b> walk down on Manhattan looking like a strong, fashionable, wealthy, and independent woman. </b><br>
   I used to be interested in writing so, I am enrolled in a writing program at my high school. <br>
   However, recently I found out I don't like to write because it's too much work. I am passionate <br>
   about short poems or stories, but I am not ready to write novels. Before going into writing, I had an <br>
@@ -126,5 +126,5 @@
   loved the praise I got from it. In high school, during sophomore year, we did Shakespeare plays. These plays <br>
   helped me realize how passionate I was about acting. Due to this, I enrolled for college now drama classes at Queens<br>
   college. I can't wait to get started. So far, I am set on doing a major at computer science and minor in acting. <br>
-  I know it will be a challenge, but I am willing to do anything to accomplish my dream.
+  I know it will be a challenge, but I am willing to do anything to accomplish my dream. </p2>
 </div>
