--- a/images/index.html
+++ b/images/index.html
@@ -114,7 +114,7 @@
 
 <div id="section7">
   <h1> Dreams and Career Path </h1>
-  <img src="m2.jpg" height="150"><img src="f.jpg" height="150" width="100"><br>
+  <img src="m2.jpg" height="150"><img src="c.jpg" height="150" width="100"><br>
   <img src="mm.jpg" height="200" > <br>
   <p2 style="font-size: 20px;">My dream is to <b> walk down on Manhattan looking like a strong, fashionable, wealthy, and independent woman. </b><br>
   I used to be interested in writing so, I am enrolled in a writing program at my high school. <br>
