--- a/images/index.html
+++ b/images/index.html
@@ -107,14 +107,14 @@
   <h1> My Family </h1>
   <img src="mp.jpg" height="350" length="100"> <img src="s.jpg" height="350" length="100"> <br>
   <p2 style="font-size: 20px;">My <b>SWEET MOM</b> and <b>AWESOME DAD</b><br>
-    <img src="bro.jpg" height="350" length="100"> <img src=" b.jpg" height="350"><br>
+    <img src="bro.jpg" height="350" length="100"> <img src=" bro2.jpg" height="350"><br>
     My mean smart bro. I don't even know why god gave him brains. <br><b> HE DOESN'T DESERVE BRAINS</b>.
     However, who am I to judge?</p2>
   </div>
 
 <div id="section7">
   <h1> Dreams and Career Path </h1>
-  <img src="m2.jpg" height="150"><img src="c.jpg" height="150" width="100"><br>
+  <img src="m2.jpg" height="150"> <img src="f.jpg" height="150" width="100"><br>
   <img src="mm.jpg" height="200" > <br>
   <p2 style="font-size: 20px;">My dream is to <b> walk down on Manhattan looking like a strong, fashionable, wealthy, and independent woman. </b><br>
   I used to be interested in writing so, I am enrolled in a writing program at my high school. <br>
