--- a/images/index.html
+++ b/images/index.html
@@ -107,7 +107,7 @@
   <h1> My Family </h1>
   <img src="mp.jpg" height="350" length="100"> <img src="s.jpg" height="350" length="100"> <br>
   <p2 style="font-size: 20px;">My <b>SWEET MOM</b> and <b>AWESOME DAD</b><br>
-    <img src="bro.jpg" height="350" length="100"> <img src=" bro2.jpg" height="350"><br>
+    <img src="bro.jpg" height="350" length="100"> <img src=" bro2.JPG" height="350"><br>
     My mean smart bro. I don't even know why god gave him brains. <br><b> HE DOESN'T DESERVE BRAINS</b>.
     However, who am I to judge?</p2>
   </div>
