--- a/images/index.html
+++ b/images/index.html
@@ -71,11 +71,12 @@ div.tab button:hover {
     <body>
 
     <div id="section1"  align="center">
-      <img  align= "left" src="me.jpg" width:"300" height="287" >
+      <img  align= "left" src="me.jpg" width:"300" height="320" >
       <br><br><br>
       <b><p1 style="color: dimgray;"> Hi, I am a leaf. <br> I am normal teenager born on September 8, 2001.<br> I still don't know why I was brought
         into this world but I am figuring it out. <br> I am a muslim and have 4 family members whom I cherish.<br> This website
-        is designed to let you get to know me. <br> Please enjoy, and just a warning, I don't know what grammar is. </b> </p1>
+        is designed to let you get to know me. <br> Click on the tabs to navigate my through website, and just a warning, I don't know what grammar is.  Enjoy!!</b> <br>
+        </p1>
     </div>
 <br>
 <div class="tab">
@@ -88,20 +89,20 @@ div.tab button:hover {
 </div>
 
 <div id="section2" class="tabcontent">
-    <b><h1> <br>All About Ma Name </h1></b>
-      <b><p style="font-size: 27px;color: lavenderblush; "> My actual name is Aleef Noor. My first name could mean a leaf but it also is the 
+    <b><h1 style="color: peachpuff;"> <br>All About Ma Name </h1></b>
+      <b><p style="font-size: 25px;color: white; "> My actual name is Aleef Noor. My first name could mean a leaf but it also is the 
       <i><b>first letter of the arabic alphabet</i></b>.
-      <br> You know enough history about my first name. Now, let us get to know my last name. <br> My last name is Noor. Noor means light.
+      You know enough history about my first name. Now, let us get to know my last name. <br> My last name is Noor. Noor means light.
       So, I like to think my name means <b><i> First Light. </i></b>
       <br>Since now you are familiar with my name, let us look at my interests.
-        <b> A leaf. Yes, I love this joke </b></p>
+        <br><b> A leaf. Yes, I love this joke </b></p>
   <img src= "leave-clipart.jpg" width="150" height="110"></p></b>
 </div>
 
 
 
 <div id="section3" class="tabcontent" >
-<h1> Fav Foods </h1>
+<h1 style="color: Crimson;"> Fav Foods </h1>
 <img src= "hamburger.jpg" alt="juicy Hamburger" width="100"> <img src="pizza.jpg" width="100">
 <br><img src="pasta.jpg" width="100"> <img src="meatballs.jpg" width="100">
   <br> <p3 style="font-size: 20px;color: maroon;"> As you can tell from the pictures above, <b> I LOVE JUNK FOOD.</B>
@@ -109,19 +110,19 @@ div.tab button:hover {
   <br>  I also <b> LOVE </b> sweets. In fact, I wouldn't mind to marry one.
 <br> <img src= "Gulab.jpg" width="100"> <img src="lado.jpg" width="100">
   <br><img src="choco.jpg" width="100"> <img src="ice.jpg" width="150">
-  <br> Just so you know, I love sweets more than junk food.</p3>
+  <br> Just so you know, I love sweets <b>MORE</b> than junk food.</p3>
 </div>
 
 <div id="section4" class="tabcontent">
-  <h1> Hobbies </h1>
-  <br><img src="family.jpg" width="300"> <img src="monkey.jpg" width="150">
+  <h1 style="color: indigo;"> Hobbies </h1>
+  <img src="family.jpg" width="300"> <img src="monkey.jpg" width="150">
   <br>  <p1 style="font-size: 20px;color: midnightblue;" >  In my free time I love to do <b>nothing</b>. I just like to sit and stare into empty space.<br>
    However, if I want to do something, I like to <b>read a book</b> or <b>spend time with friends or family</b>.<br>
    I also like to <b>watch a movie</b> or <b>research</b> something of my interest.</p1>
  </div>
 
 <div id="section5" class="tabcontent">
-  <b><h7 style="font-size: 30px">  Fav Colors </h7></b>
+  <b><h7 style="font-size: 200%; color: dodgerblue;">  Fav Colors </h7></b>
   <br>
   <br><img src="color.png" width="150" > <img src="bright.jpg" width="150" >
   <br><p2 style="font-size: 25px; color: indigo;"> I love pastel and bright colors. My most fav colors are <b> cotton candy pink</b> and <b> sky blue. </b>
@@ -129,7 +130,7 @@ div.tab button:hover {
 </div>
 
 <div id="section6" class="tabcontent">
-  <h1> My Family </h1>
+  <h1 style="color: orangered;"> My Family </h1>
   <img src="mp.jpg" height="350" length="100"> <img src="s.jpg" height="350" length="100"> <br>
   <p4 style="font-size: 20px;color: maroon">My <b>SWEET MOM</b> and <b>AWESOME DAD</b><br>
     <img src="bro.jpg" height="350" length="100"> <img src=" bro2.JPG" height="350"><br>
@@ -138,10 +139,10 @@ div.tab button:hover {
   </div>
 
 <div id="section7" class="tabcontent">
-  <h1> Dreams and Career Path </h1>
+  <h1 style="color: slateblue;"> Dreams and Career Path </h1>
   <img src="m2.jpg" height="150"> <img src="f.jpg" height="150" width="100"><br>
   <img src="mm.jpg" height="200" > <br>
-  <p2 style="font-size: 20px;color: olive;">My dream is to <b> walk down on Manhattan looking like a strong, fashionable, wealthy, and independent woman. </b><br>
+  <p2 style="font-size: 20px;color: darkblue;">My dream is to <b> walk down on Manhattan looking like a strong, fashionable, wealthy, and independent woman. </b><br>
   I used to be interested in writing so, I am enrolled in a writing program at my high school. <br>
   However, recently I found out I don't like to write because it's too much work. I am passionate <br>
   about short poems or stories, but I am not ready to write novels. Before going into writing, I had an <br>
