--- a/images/index.html
+++ b/images/index.html
@@ -32,6 +32,7 @@ div.tab button:hover {
     border-top: none;
 }
 
+
         div#section1 {
           background-color: lightpink;
           background-image: url("back1.jpg");
@@ -59,8 +60,7 @@ div.tab button:hover {
         div#section6 {
           background-color: yellow;
           background-image: url("back7.png");
-
-        }
+         }
          div#section7 {
           background-color: Crimson;
            background-image: url("back8.jpg");
@@ -73,9 +73,9 @@ div.tab button:hover {
     <div id="section1"  align="center">
       <img  align= "left" src="me.jpg" width:"300" height="320" >
       <br><br><br>
-      <b><p1 style="color: dimgray;"> Hi, I am a leaf. <br> I am normal teenager born on September 8, 2001.<br> I still don't know why I was brought
+      <b><p1 style="color: dimgray;"> Hi, I am a leaf. <br> I am a normal teenager born on September 8, 2001.<br> I still don't know why I was brought
         into this world but I am figuring it out. <br> I am a muslim and have 4 family members whom I cherish.<br> This website
-        is designed to let you get to know me. <br> Click on the tabs to navigate my through website, and just a warning, I don't know what grammar is.  Enjoy!!</b> <br>
+        is designed to let you to get to know me. <br> Click on the tabs to navigate through my website, and just a warning, I don't know what grammar is.  Enjoy!!</b> <br>
         </p1>
     </div>
 <br>
@@ -129,14 +129,50 @@ div.tab button:hover {
   <br> I also like neon green.</p2>
 </div>
 
+<div class="slideshow-container">
 <div id="section6" class="tabcontent">
-  <h1 style="color: orangered;"> My Family </h1>
-  <img src="mp.jpg" height="350" length="100"> <img src="s.jpg" height="350" length="100"> <br>
-  <p4 style="font-size: 20px;color: maroon">My <b>SWEET MOM</b> and <b>AWESOME DAD</b><br>
-    <img src="bro.jpg" height="350" length="100"> <img src=" bro2.JPG" height="350"><br>
-    My mean smart bro. I don't even know why god gave him brains. <br><b> HE DOESN'T DESERVE BRAINS</b>.
-    However, who am I to judge?</p2>
-  </div>
+ <h1 style="color: orangered;"> My Family </h1>
+     <div class="slides">
+      <div class="numbertext"> Washington DC </div>
+      <img src="5.jpg" height="350" length="100"> 
+    </div>
+     <div class="slides">
+      <div class="numbertext"> George Island Park </div>
+      <img src="3.jpg" height="350" length="100"> 
+    </div>
+     <div class="slides">
+     <div class="numbertext"> Ireland Airport </div>
+      <img src="7.jpg" height="350" length="100"> 
+    </div>
+    <div class="slides">
+    <div class="numbertext"> Kuwait Hotel </div>
+      <img src="6.jpg" height="350" length="100"> 
+    </div>
+    <p4 style="font-size: 20px;color: maroon">My <b>SWEET MOM</b> and <b>AWESOME DAD</b></p4>
+    <div class="bslides">
+     <br>
+    <img src="bro.jpg" height="350" length="100"> 
+    <div style="color: indigo;"> My 12th Birthday </div><br>
+    </div>
+    <div class="bslides">
+    <br>
+    <img src=" bro2.JPG" height="350"><br>
+     <div style="color: blue;"> My bro winning an award meant for <b>SUPER</b> smart students in Oman. </div><br>
+    </div>
+    <p4 style="font-size: 20px;color: maroon"> My mean smart bro. I don't even know why god gave him brains. <br><b> HE DOESN'T DESERVE BRAINS</b>.
+    However, who am I to judge?</p4>
+        <div style="text-align:center">
+        <span class="dot"></span> 
+        <span class="dot"></span> 
+        <span class="dot"></span>
+        <span class="dot"></span> 
+        </div>
+
+        <div style="text-align:center"> 
+        <span class="pot"></span> 
+        <span class="pot"></span>  
+        </div>
+</div>
 
 <div id="section7" class="tabcontent">
   <h1 style="color: slateblue;"> Dreams and Career Path </h1>
@@ -157,6 +193,50 @@ div.tab button:hover {
 
 </html>
 </body>
+<script>
+var slidesIndex = 0;
+showslides1();
+
+function showslides1() {
+    var i;
+    var slides1 = document.getElementsByClassName("slides");
+    var dots = document.getElementsByClassName("dot");
+    for (i = 0; i < slides1.length; i++) {
+       slides1[i].style.display = "none";  
+    }
+    slidesIndex++;
+    if (slidesIndex> slides1.length) {slidesIndex = 1}    
+    for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+    }
+    slides1[slidesIndex-1].style.display = "block";  
+    dots[slidesIndex-1].className += " active";
+    setTimeout(showslides1, 2000); // Change image every 2 seconds
+}
+</script>
+
+<script>
+var slideIndex = 0;
+showSlides();
+
+function showSlides() {
+    var i;
+    var slides = document.getElementsByClassName("bslides");
+    var pots = document.getElementsByClassName("pot");
+    for (i = 0; i < slides.length; i++) {
+       slides[i].style.display = "none";  
+    }
+    slideIndex++;
+    if (slideIndex> slides.length) {slideIndex = 1}    
+    for (i = 0; i < pots.length; i++) {
+        pots[i].className = pots[i].className.replace(" active", "");
+    }
+    slides[slideIndex-1].style.display = "block";  
+    pots[slideIndex-1].className += " active";
+    setTimeout(showSlides, 3000); // Change image every 2 seconds
+}
+</script>
+
 <script>
 function openCity(evt, cityName) {
     var i, tabcontent, tablinks;
