--- a/images/index.html
+++ b/images/index.html
@@ -133,19 +133,19 @@ div.tab button:hover {
 <div id="section6" class="tabcontent">
  <h1 style="color: orangered;"> My Family </h1>
      <div class="slides">
-      <div class="numbertext"> Washington DC </div>
+      <div style="color: darkred;"> Washington DC </div>
       <img src="5.jpg" height="350" length="100"> 
     </div>
      <div class="slides">
-      <div class="numbertext"> George Island Park </div>
+      <div style="color: darkmagenta;"> George Island Park </div>
       <img src="3.jpg" height="350" length="100"> 
     </div>
      <div class="slides">
-     <div class="numbertext"> Ireland Airport </div>
+     <div style="color: Navy ;"> Ireland Airport </div>
       <img src="7.jpg" height="350" length="100"> 
     </div>
     <div class="slides">
-    <div class="numbertext"> Kuwait Hotel </div>
+    <div style="color: midnightblue;"> Kuwait Hotel </div>
       <img src="6.jpg" height="350" length="100"> 
     </div>
     <p4 style="font-size: 20px;color: maroon">My <b>SWEET MOM</b> and <b>AWESOME DAD</b></p4>
