--- a/images/index.html
+++ b/images/index.html
@@ -113,6 +113,7 @@ div.tab button:hover {
   <button class="tablinks" onclick="openCity(event, 'section6')">Family</button>
   <button class="tablinks" onclick="openCity(event, 'section7')">Dreams</button>
   <button class="tablinks" onclick="openCity(event, 'section8')">GWC Projects</button>
+  <button class="tablinks" onclick="openCity(event, 'section9')">Passions</button>
 </div>
 
 <div id="section2" class="tabcontent">
@@ -256,6 +257,9 @@ div.tab button:hover {
     </div> 
   </div>
 
+<div id="section8"  class="tabcontent">
+<h1 style="color: magenta;"> Passions <h1>
+</div>
 
 </html>
 </body>
