--- a/images/index.html
+++ b/images/index.html
@@ -9,14 +9,17 @@
 
     </head>
     <body>
-<div id="intro"  align="center">
-  <img src="intro.png " height="580">
-</div>
-
 
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'section2')">About Me</button>
   <button class="tablinks" onclick="openCity(event, 'section8')">Projects</button>
+</div>
+
+<div id="intro"  align="left">
+  <img src="me3.jpg" height="580" width="300" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+  <img src="intro.png " height="580" width="300" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+  <img src="intro2.jpg" src="me3.jpg" height="580" width="300" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+  <p style="clear: both;">
 </div>
 
 <div id="section1" class="tabcontent">
