--- a/images/index.html
+++ b/images/index.html
@@ -16,6 +16,7 @@
   <button class="tablinks" onclick="openCity(event, 'section8')">Projects</button>
 </div>
 
+
 <div id="intro"  align="left" class="tabcontent">
   <img src="me3.jpg" height="580" width="300" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
   <img src="intro.png " height="580" width="300" style="float: left; width: 40%; margin-right: 1%; margin-bottom: 0.5em;">
@@ -23,58 +24,44 @@
   <p style="clear: both;">
 </div>
 
-<div id="section1" class="tabcontent">
-      <img  align= "left" src="me.jpg" width:"300" height="320" >
-      <br><br><br>
-      <b><p1 style="color: dimgray;"> Hi, I am a leaf. <br> I am a normal teenager born on September 8, 2001.<br> I still don't know why I was brought
-        into this world but I am figuring it out. <br> I am a muslim and have 4 family members whom I cherish.<br> This website
-        is designed to let you to get to know me. <br> Click on the tabs to navigate through my website, and just a warning, I don't know what grammar is.  Enjoy!!</b> <br>
-        </p1>
-</div>
-
 <div id="section2" class="tabcontent">
-    <b><h1 style="color: peachpuff;"> <br>All About Ma Name </h1></b>
-      <b><p style="font-size: 25px;color: white; "> My actual name is Aleef Noor. My first name could mean a leaf but it also is the 
-      <i><b>first letter of the arabic alphabet</i></b>.
-      You know enough history about my first name. Now, let us get to know my last name. <br> My last name is Noor. Noor means light.
-      So, I like to think my name means <b><i> First Light. </i></b>
-      <br>Since now you are familiar with my name, let us look at my interests.
-        <br><b> A leaf. Yes, I love this joke </b></p>
-  <img src= "leave-clipart.jpg" width="150" height="110"></p></b>
+        <div class="tab2">
+      <button class="tablinks2" onclick="openCity2(event, 'section6')" id="defaultOpen2">My Family</button>
+      <button class="tablinks2" onclick="openCity2(event, 'section4')">Hobbies</button>
+      <button class="tablinks2" onclick="openCity2(event, 'section25')">My name</button>
+
+      <div class="dropdown">
+      <button class="tablinks2" onclick="openCity2(event, 'section3')">Favs</button>
+      <div class="dropdown-content">
+        <a href="#">   </a>
+        <a onclick="document.getElementById('section3').scrollIntoView()">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+      </div>
+          </div>
+
+
+<div id="section25" class="tabcontent1">
+     <b><h1 style="color: peachpuff;"> <br>All About Ma Name </h1></b>
+        <b><p style="font-size: 25px;color: white; "> My actual name is Aleef Noor. My first name could mean a leaf but it also is the 
+        <i><b>first letter of the arabic alphabet</i></b>.
+        You know enough history about my first name. Now, let us get to know my last name. <br> My last name is Noor. Noor means light.
+        So, I like to think my name means <b><i> First Light. </i></b>
+        <br>Since now you are familiar with my name, let us look at my interests.
+          <br><b> A leaf. Yes, I love this joke </b></p>
+        <img src= "leave-clipart.jpg" width="150" height="110"></p></b> 
 </div>
 
+  <div id="section4" class="tabcontent1">
+    <h1 style="color: indigo;"> Hobbies </h1>
+    <img src="family.jpg" width="300"> <img src="monkey.jpg" width="150">
+    <br>  <p1 style="font-size: 30px;color: midnightblue;" >  In my free time I love to do <b>nothing</b>. I just like to sit and stare into empty space.<br>
+    However, if I want to do something, I like to <b>read a book</b> or <b>spend time with friends or family</b>.<br>
+     I also like to <b>watch a movie</b> or <b>research</b> something of my interest.</p1>
+  </div>
 
-
-<div id="section3" class="tabcontent" >
-<h1 style="color: Crimson;"> Fav Foods </h1>
-<img src= "hamburger.jpg" alt="juicy Hamburger" width="100"> <img src="pizza.jpg" width="100">
-<br><img src="pasta.jpg" width="100"> <img src="meatballs.jpg" width="100">
-  <br> <p3 style="font-size: 20px;color: maroon;"> As you can tell from the pictures above, <b> I LOVE JUNK FOOD.</B>
-  <br>  However, I eat healthy everyday and consume junk food in limited amounts.
-  <br>  I also <b> LOVE </b> sweets. In fact, I wouldn't mind to marry one.
-<br> <img src= "Gulab.jpg" width="100"> <img src="lado.jpg" width="100">
-  <br><img src="choco.jpg" width="100"> <img src="ice.jpg" width="150">
-  <br> Just so you know, I love sweets <b>MORE</b> than junk food.</p3>
-</div>
-
-<div id="section4" class="tabcontent">
-  <h1 style="color: indigo;"> Hobbies </h1>
-  <img src="family.jpg" width="300"> <img src="monkey.jpg" width="150">
-  <br>  <p1 style="font-size: 20px;color: midnightblue;" >  In my free time I love to do <b>nothing</b>. I just like to sit and stare into empty space.<br>
-   However, if I want to do something, I like to <b>read a book</b> or <b>spend time with friends or family</b>.<br>
-   I also like to <b>watch a movie</b> or <b>research</b> something of my interest.</p1>
- </div>
-
-<div id="section5" class="tabcontent">
-  <b><h7 style="font-size: 200%; color: dodgerblue;">  Fav Colors </h7></b>
-  <br>
-  <br><img src="color.png" width="150" > <img src="bright.jpg" width="150" >
-  <br><p2 style="font-size: 25px; color: indigo;"> I love pastel and bright colors. My most fav colors are <b> cotton candy pink</b> and <b> sky blue. </b>
-  <br> I also like neon green.</p2>
-</div>
-
-<div class="slideshow-container">
-<div id="section6" class="tabcontent">
+   <div class="slideshow-container">
+<div id="section6" class="tabcontent1">
  <h1 style="color: orangered;"> My Family </h1>
      <div class="slides">
       <div style="color: darkred;"> Washington DC </div>
@@ -116,27 +103,25 @@
         <span class="pot"></span> 
         <span class="pot"></span>  
         </div>
-</div>
+  </div>
+      </div>
+      <div id="section3" class="tabcontent1" >
+        <h1 style="color: Crimson;"> Fav Foods </h1>
+        <img src= "hamburger.jpg" alt="juicy Hamburger" width="100"> <img src="pizza.jpg" width="100">
+        <br><img src="pasta.jpg" width="100"> <img src="meatballs.jpg" width="100">
+          <br> <p3 style="font-size: 20px;color: maroon;"> As you can tell from the pictures above, <b> I LOVE JUNK FOOD.</B>
+          <br>  However, I eat healthy everyday and consume junk food in limited amounts.
+          <br>  I also <b> LOVE </b> sweets. In fact, I wouldn't mind to marry one.
+        <br> <img src= "Gulab.jpg" width="100"> <img src="lado.jpg" width="100">
+          <br><img src="choco.jpg" width="100"> <img src="ice.jpg" width="150">
+          <br> Just so you know, I love sweets <b>MORE</b> than junk food.</p3>
+      </div>
 
-<div id="section7" class="tabcontent">
-  <h1 style="color: slateblue;"> Dreams and Career Path </h1>
-  <img src="m2.jpg" height="150"> <img src="f.jpg" height="150" width="100"><br>
-  <img src="mm.jpg" height="200" > <br>
-  <p2 style="font-size: 20px;color: darkblue;">My dream is to <b> walk down on Manhattan looking like a strong, fashionable, wealthy, and independent woman. </b><br>
-  I used to be interested in writing so, I am enrolled in a writing program at my high school. <br>
-  However, recently I found out I don't like to write because it's too much work. I am passionate <br>
-  about short poems or stories, but I am not ready to write novels. Before going into writing, I had an <br>
-  interest in computer science and I wanted to work for google. I am back to that dream again. <br>
-  Due to the dream, I am attending Girls Who Code to refresh my memory in code. So far, I am loving it. <br>
-  I am also extremely interested in acting. I was part of my drama club in middle school. I acted and I <br>
-  loved the praise I got from it. In high school, during sophomore year, we did Shakespeare plays. These plays <br>
-  helped me realize how passionate I was about acting. Due to this, I enrolled for college now drama classes at Queens<br>
-  college. I can't wait to get started. So far, I am set on doing a major at computer science and minor in acting. <br>
-  I know it will be a challenge, but I am willing to do anything to accomplish my dream. </p2>
 </div>
 
 <div class="slideshow-container2">
   <div id="section8" class="tabcontent">
+  <br>
   <h1 style="color: darkblue;"> My Girls Who Code Projects <h1>
 
   <div class="gslides fade">
@@ -158,9 +143,11 @@
    <div class="gslides fade">
    <img src="g1.PNG" height="250" width="480" >
    <br>
-   <p style="color:darkred; font-size: 20px"> These are some python projects. Here is the link: <a href="https://github.com/AleefNoor/AleefNoor.github.io/tree/master/Python"; style="color: dodgerblue;"> https://github.com/AleefNoor/AleefNoor.github.io/tree/master/Python </p> </a>
+   <p style="color:darkred; font-size: 20px"> These are some python projects. Here is the link: <a href="https://github.com/AleefNoor/AleefNoor.github.io/tree/master/Python"; style="color: dodgerblue;"> https://github.com/AleefNoor/AleefNoor.github.io/tree/master/Python</a></p>
    </div>
 
+
+<div>
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
@@ -170,8 +157,35 @@
   <span class="got" onclick="currentSlide(2)"></span> 
   <span class="got" onclick="currentSlide(3)"></span> 
   <span class="got" onclick="currentSlide(4)"></span> 
-    </div> 
-  </div>
+   </div> 
+</div>
+
+
+<div id="section5" class="tabcontent">
+  <b><h7 style="font-size: 200%; color: dodgerblue;">  Fav Colors </h7></b>
+  <br>
+  <br><img src="color.png" width="150" > <img src="bright.jpg" width="150" >
+  <br><p2 style="font-size: 25px; color: indigo;"> I love pastel and bright colors. My most fav colors are <b> cotton candy pink</b> and <b> sky blue. </b>
+  <br> I also like neon green.</p2>
+</div>
+
+<div id="section7" class="tabcontent">
+  <h1 style="color: slateblue;"> Dreams and Career Path </h1>
+  <img src="m2.jpg" height="150"> <img src="f.jpg" height="150" width="100"><br>
+  <img src="mm.jpg" height="200" > <br>
+  <p2 style="font-size: 20px;color: darkblue;">My dream is to <b> walk down on Manhattan looking like a strong, fashionable, wealthy, and independent woman. </b><br>
+  I used to be interested in writing so, I am enrolled in a writing program at my high school. <br>
+  However, recently I found out I don't like to write because it's too much work. I am passionate <br>
+  about short poems or stories, but I am not ready to write novels. Before going into writing, I had an <br>
+  interest in computer science and I wanted to work for google. I am back to that dream again. <br>
+  Due to the dream, I am attending Girls Who Code to refresh my memory in code. So far, I am loving it. <br>
+  I am also extremely interested in acting. I was part of my drama club in middle school. I acted and I <br>
+  loved the praise I got from it. In high school, during sophomore year, we did Shakespeare plays. These plays <br>
+  helped me realize how passionate I was about acting. Due to this, I enrolled for college now drama classes at Queens<br>
+  college. I can't wait to get started. So far, I am set on doing a major at computer science and minor in acting. <br>
+  I know it will be a challenge, but I am willing to do anything to accomplish my dream. </p2>
+</div>
+
 
 </html>
 </body>
