--- a/images/index.html
+++ b/images/index.html
@@ -33,9 +33,7 @@
       <div class="dropdown">
       <button class="tablinks2" onclick="openCity2(event, 'section3')">Favs</button>
       <div class="dropdown-content">
-        <a href="#">   </a>
-        <a onclick="document.getElementById('section3').scrollIntoView()">Link 2</a>
-        <a href="#">Link 3</a>
+        <a onclick="openCity2(event, 'section5')">Colors</a>
       </div>
       </div>
           </div>
@@ -105,7 +103,11 @@
         </div>
   </div>
       </div>
-      <div id="section3" class="tabcontent1" >
+    
+
+</div>
+
+ <div id="section3" class="tabcontent1" >
         <h1 style="color: Crimson;"> Fav Foods </h1>
         <img src= "hamburger.jpg" alt="juicy Hamburger" width="100"> <img src="pizza.jpg" width="100">
         <br><img src="pasta.jpg" width="100"> <img src="meatballs.jpg" width="100">
@@ -117,7 +119,6 @@
           <br> Just so you know, I love sweets <b>MORE</b> than junk food.</p3>
       </div>
 
-</div>
 
 <div class="slideshow-container2">
   <div id="section8" class="tabcontent">
@@ -161,7 +162,7 @@
 </div>
 
 
-<div id="section5" class="tabcontent">
+<div id="section5" class="tabcontent1" >
   <b><h7 style="font-size: 200%; color: dodgerblue;">  Fav Colors </h7></b>
   <br>
   <br><img src="color.png" width="150" > <img src="bright.jpg" width="150" >
