--- a/images/index.html
+++ b/images/index.html
@@ -29,14 +29,13 @@
       <button class="tablinks2" onclick="openCity2(event, 'section6')" id="defaultOpen2">My Family</button>
       <button class="tablinks2" onclick="openCity2(event, 'section4')">Hobbies</button>
       <button class="tablinks2" onclick="openCity2(event, 'section25')">My name</button>
-
       <div class="dropdown">
       <button class="tablinks2" onclick="openCity2(event, 'section3')">Favs</button>
       <div class="dropdown-content">
-        <a onclick="openCity2(event, 'section5')">Colors</a>
-      </div>
-      </div>
-          </div>
+      <a onclick= "openCity2(event, 'section5')">Link 1</a>
+  </div>
+</div>
+</div>
 
 
 <div id="section25" class="tabcontent1">
@@ -57,6 +56,26 @@
     However, if I want to do something, I like to <b>read a book</b> or <b>spend time with friends or family</b>.<br>
      I also like to <b>watch a movie</b> or <b>research</b> something of my interest.</p1>
   </div>
+
+   <div id="section3" class="tabcontent1">
+ <h1 style="color: Crimson;"> Fav Foods </h1>
+        <img src= "hamburger.jpg" alt="juicy Hamburger" width="100"> <img src="pizza.jpg" width="100">
+        <br><img src="pasta.jpg" width="100"> <img src="meatballs.jpg" width="100">
+          <br> <p3 style="font-size: 20px;color: maroon;"> As you can tell from the pictures above, <b> I LOVE JUNK FOOD.</b>
+          <br>  However, I eat healthy everyday and consume junk food in limited amounts.
+          <br>  I also <b> LOVE </b> sweets. In fact, I wouldn't mind to marry one.
+        <br> <img src= "Gulab.jpg" width="100"> <img src="lado.jpg" width="100">
+          <br><img src="choco.jpg" width="100"> <img src="ice.jpg" width="150">
+          <br> Just so you know, I love sweets <b>MORE</b> than junk food.</p3> 
+      </div>
+
+    <div id="section5" class="tabcontent1" >
+      <b><h7 style="font-size: 200%; color: dodgerblue;">  Fav Colors </h7></b>
+      <br>
+      <br><img src="color.png" width="150" > <img src="bright.jpg" width="150" >
+      <br><p2 style="font-size: 25px; color: indigo;"> I love pastel and bright colors. My most fav colors are <b> cotton candy pink</b> and <b> sky blue. </b>
+      <br> I also like neon green.</p2>
+    </div>
 
    <div class="slideshow-container">
 <div id="section6" class="tabcontent1">
@@ -107,18 +126,6 @@
 
 </div>
 
- <div id="section3" class="tabcontent1" >
-        <h1 style="color: Crimson;"> Fav Foods </h1>
-        <img src= "hamburger.jpg" alt="juicy Hamburger" width="100"> <img src="pizza.jpg" width="100">
-        <br><img src="pasta.jpg" width="100"> <img src="meatballs.jpg" width="100">
-          <br> <p3 style="font-size: 20px;color: maroon;"> As you can tell from the pictures above, <b> I LOVE JUNK FOOD.</B>
-          <br>  However, I eat healthy everyday and consume junk food in limited amounts.
-          <br>  I also <b> LOVE </b> sweets. In fact, I wouldn't mind to marry one.
-        <br> <img src= "Gulab.jpg" width="100"> <img src="lado.jpg" width="100">
-          <br><img src="choco.jpg" width="100"> <img src="ice.jpg" width="150">
-          <br> Just so you know, I love sweets <b>MORE</b> than junk food.</p3>
-      </div>
-
 
 <div class="slideshow-container2">
   <div id="section8" class="tabcontent">
@@ -161,14 +168,6 @@
    </div> 
 </div>
 
-
-<div id="section5" class="tabcontent1" >
-  <b><h7 style="font-size: 200%; color: dodgerblue;">  Fav Colors </h7></b>
-  <br>
-  <br><img src="color.png" width="150" > <img src="bright.jpg" width="150" >
-  <br><p2 style="font-size: 25px; color: indigo;"> I love pastel and bright colors. My most fav colors are <b> cotton candy pink</b> and <b> sky blue. </b>
-  <br> I also like neon green.</p2>
-</div>
 
 <div id="section7" class="tabcontent">
   <h1 style="color: slateblue;"> Dreams and Career Path </h1>
